day04/bgg/bggns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: bggns
  labels:
    app: bgg
