day04/bgg/bggapp.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bggapp-deploy
  namespace: bggns
  labels:
    app: bgg
    name: bggapp-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bgg
      name: bggapp-po
  template:
    metadata:
      name: bggapp-po
      labels:
        app: bgg
        name: bggapp-po
    spec:
      containers:
      - name: bggapp-container
        image: stackupiss/bgg-backend:v2
        imagePullPolicy: IfNotPresent
        ports:
        - name: bggapp-port
          containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: bggapp-svc
  namespace: bggns
  labels:
    app: bgg
    name: bggapp-svc
spec:
  type: ClusterIP
  selector:
    app: bgg
    name: bggapp-po
  ports:
  - name: bggapp-port
    port: 3000
    targetPort: bggapp-port
