day04/bgg/bggdb.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bggdb-deploy
  namespace: bggns
  labels:
    app: bgg
    name: bggdb-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bgg
      name: bggdb-po
  template:
    metadata:
      name: bggdb-po
      labels:
        app: bgg
        name: bggdb-po
    spec:
      containers:
      - name: bggdb-container
        image: stackupiss/bgg-database:v1
        imagePullPolicy: IfNotPresent
        ports:
        - name: bggdb-port
          containerPort: 3306

---
apiVersion: v1
kind: Service
metadata:
  name: bggdb-svc
  namespace: bggns
  labels:
    app: bgg
    name: bggdb-svc
spec:
  type: ClusterIP
  selector:
    app: bgg
    name: bggdb-po
  ports:
  - name: bggdb-port
    port: 3306
    targetPort: bggdb-port
