day04/bgg/policies.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: bggns
  labels:
    app: bgg
    name: deny-all
spec: 
  podSelector: 
    matchLabels:
      app: bgg 
      name: bggapp-po
  policyTypes:
  - Ingress 
  - Egress

---
apiVersion: networking.k8s.io/v1 
kind: NetworkPolicy
metadata:
  name: allow-access
  namespace:  bggns
  labels:
    app: bgg 
    name: allow-access
spec: 
  podSelector: 
    matchLabels:
      app: bgg 
      name: bggapp-po
  policyTypes:
  - Ingress
  ingress: 
  - from: 
    - podSelector:
        matchLabels:
          web-access: enabled
    ports: 
    - port: 3000

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
  namespace: dovns
  labels:
    app: dov
    name: allow-dns
spec: 
  podSelector: 
    matchLabels:
      access-dns: enabled 
  policyTypes:
  - Egress
  egress:
  - to:
    - ports:
      - port: 53
        protocol: TCP
      - port: 53
        protocol: UDP
